change definition font

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -65,7 +65,8 @@ blockquote {
   border-left: 5px solid var(--global-theme-color);
   margin: 1.5em 0;
   padding: 1em;
-  font-size: 1.2rem;
+  font-size: 1.0rem;
+  font-family: "PT Serif","Times New Roman",Times,serif /* Change font */
 
   p {
     margin-bottom: 0;
