update css for main page

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -8,9 +8,10 @@
   --global-bg-color: #{$white-color};
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
+  --global-text-color-less-light: rgb(80, 80, 80);
   --global-text-color-light: #{$grey-color};
   --global-theme-color: rgb(47, 99, 174);
-  --global-hover-color: #{$purple-color};
+  --global-hover-color: rgb(5, 67, 124);;
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
