--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,13 +35,14 @@ table {
   }
 }
 
+
 a,
 table.table a {
   color: var(--global-theme-color);
 
   &:hover {
-    color: var(--global-theme-color);
-    text-decoration: underline;
+    color: var(--global-hover-color);
+    text-decoration: none;
   }
 
   &:hover:after :not(.nav-item.dropdown) {
@@ -164,7 +165,7 @@ ul.task-list input[type="checkbox"] {
     color: inherit;
 
     &:hover {
-      color: var(--global-theme-color);
+      color: var(--global-hover-color);
       text-decoration: none;
     }
   }
@@ -213,6 +214,7 @@ ul.task-list input[type="checkbox"] {
   }
 
   .navbar-brand {
+    display: none;
     color: var(--global-text-color);
   }
 
@@ -470,9 +472,20 @@ footer.sticky-bottom {
 }
 
 .post-title {
+  font-size: 1.3rem; /* Adjust size as needed */
+  font-weight: 400;
+
   mjx-container[jax="CHTML"][display="true"] {
     display: unset;
   }
+}
+
+.blog-header{
+  text-align: center; /* Centers the text horizontally */
+  margin: 0 auto; /* Centers the div horizontally if it has a set width */
+  padding: 10px; /* Optional: Adjust spacing */
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 .post-list {
@@ -486,16 +499,33 @@ footer.sticky-bottom {
     padding-top: 2rem;
     padding-bottom: 2rem;
 
+    .post-bigtitle{
+      font-size: 1.5rem;
+      font-weight: 500;
+      margin-bottom: 0.0rem;
+    }
+
+    .post-subtitle {
+      color: var(--global-text-color-less-light);
+      font-size: 0.9rem;
+      margin-bottom: 0.3rem;
+    }
+
     .post-meta {
       color: var(--global-text-color-light);
-      font-size: 0.875rem;
+      font-size: 0.8rem;
       margin-bottom: 0;
+    }
+
+    .post-meta a {
+      color: inherit; /* Ensures links have the same color as the rest of the text */
+      text-decoration: none; /* Optional: removes underline if present */
     }
 
     .post-tags {
       color: var(--global-text-color-light);
-      font-size: 0.875rem;
-      padding-top: 0.25rem;
+      font-size: 0.8rem;
+      padding-top: 0.0rem;
       padding-bottom: 0;
     }
 
@@ -1006,7 +1036,7 @@ nav[data-toggle="toc"] {
       color: var(--global-theme-color);
 
       .card-title {
-        color: var(--global-theme-color);
+        color: var(--global-hover-color);
       }
     }
   }
