Fix mjx rendering bug

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -550,6 +550,13 @@ footer.sticky-bottom {
   }
 }
 
+// Added by Runlong
+mjx-container[jax="CHTML"][display="true"] {
+  display: unset;
+  margin-top: 0 !important;
+  margin-bottom: 1em !important;
+}
+
 .pagination {
   .page-item {
     .page-link {
