Fix mjx coloring bug in quotes

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -553,7 +553,7 @@ footer.sticky-bottom {
 // Added by Runlong
 mjx-container[jax="CHTML"][display="true"] {
   display: unset;
-  margin-top: 0 !important;
+  margin-top: 0.27em !important;
   margin-bottom: 1em !important;
 }
 
